RESOLVED FIXED278925
CSS timing functions should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=278925
Summary CSS timing functions should not eagerly evaluate calc()
Sam Weinig
Reported 2024-08-30 08:38:47 PDT
The CSS timing functions currently use the RawResolver to eagerly evaluate calc() during parsing. This is incorrect. Rather, like all other types, calc() evaluation should be delayed until style building.
Attachments
Sam Weinig
Comment 1 2024-08-30 09:25:29 PDT
EWS
Comment 2 2024-09-01 08:47:37 PDT
Committed 283036@main (2047aa6f9356): <https://commits.webkit.org/283036@main> Reviewed commits have been landed. Closing PR #32946 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-01 08:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.