CSS timing functions should not eagerly evaluate calc() https://bugs.webkit.org/show_bug.cgi?id=278925

Reviewed by NOBODY (OOPS!).

The CSS timing functions were using the RawResolver to eagerly evaluate calc()
during parsing, which results in incorrect serialization of specified values and
doesn't allow for use of relative lengths in the calculations. Instead, calc()
evaluation should be delayed until style building.

This change updates the timing function CSS values to store unevaluated primitives
and resolve calc() at style building time. It still doesn't allow for use of
relative lengths, as not all call sites can trivially pass in conversion data, so
that is deferred to a follow up.

While making this change, parsing has been extracted into its own file and
resolution to TimingFunction types has been moved out of platform/ (which was a
layering violation) and into CSSTimingFunctionValues.h/cpp. Additionally, a
helper to parse timing functions from strings has been added so that callers
don't have to invoke the entire CSS parser when only timing functions are needed.

* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/animation/AnimationEffect.cpp:
(WebCore::AnimationEffect::bindingsUpdateTiming):
(WebCore::AnimationEffect::updateTiming):
* Source/WebCore/animation/AnimationEffect.h:
* Source/WebCore/animation/AnimationEffect.idl:
* Source/WebCore/animation/CustomEffect.cpp:
(WebCore::CustomEffect::create):
* Source/WebCore/animation/CustomEffect.h:
* Source/WebCore/animation/CustomEffect.idl:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::create):
(WebCore::KeyframeEffect::processKeyframes):
* Source/WebCore/css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::isOne const):
* Source/WebCore/css/CSSPrimitiveValue.h:
* Source/WebCore/css/CSSTimingFunctionValue.cpp:
(WebCore::createTimingFunction):
(WebCore::CSSLinearTimingFunctionValue::LinearStop::Length::operator== const):
(WebCore::CSSLinearTimingFunctionValue::LinearStop::operator== const):
(WebCore::serializeLinearStop):
(WebCore::CSSLinearTimingFunctionValue::customCSSText const):
(WebCore::CSSLinearTimingFunctionValue::equals const):
(WebCore::CSSLinearTimingFunctionValue::createTimingFunction const):
(WebCore::CSSCubicBezierTimingFunctionValue::customCSSText const):
(WebCore::CSSCubicBezierTimingFunctionValue::equals const):
(WebCore::CSSCubicBezierTimingFunctionValue::createTimingFunction const):
(WebCore::CSSStepsTimingFunctionValue::customCSSText const):
(WebCore::CSSStepsTimingFunctionValue::equals const):
(WebCore::CSSStepsTimingFunctionValue::createTimingFunction const):
(WebCore::CSSSpringTimingFunctionValue::customCSSText const):
(WebCore::CSSSpringTimingFunctionValue::equals const):
(WebCore::CSSSpringTimingFunctionValue::createTimingFunction const):
* Source/WebCore/css/CSSTimingFunctionValue.h:
* Source/WebCore/css/CSSToStyleMap.cpp:
(WebCore::CSSToStyleMap::mapAnimationTimingFunction):
* Source/WebCore/css/CSSToStyleMap.h:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::valueForAnimationTimingFunction):
(WebCore::addValueForAnimationPropertyToList): Deleted.
(WebCore::valueListForAnimationOrTransitionProperty): Deleted.
(WebCore::singleAnimationValue): Deleted.
(WebCore::animationShorthandValue): Deleted.
(WebCore::singleTransitionValue): Deleted.
(WebCore::transitionShorthandValue): Deleted.
(WebCore::createLineBoxContainValue): Deleted.
(WebCore::valueForWebkitRubyPosition): Deleted.
(WebCore::styleElementForNode): Deleted.
(WebCore::valueForPosition): Deleted.
(WebCore::isAuto): Deleted.
(WebCore::isNormal): Deleted.
(WebCore::valueForPositionOrAuto): Deleted.
(WebCore::valueForPositionOrAutoOrNormal): Deleted.
(WebCore::valueIDForRaySize): Deleted.
(WebCore::valueForSVGPath): Deleted.
(WebCore::valueForPathOperation): Deleted.
(WebCore::valueForContainIntrinsicSize): Deleted.
(WebCore::ComputedStyleExtractor::ComputedStyleExtractor): Deleted.
(WebCore::ComputedStyleExtractor::getFontSizeCSSValuePreferringKeyword const): Deleted.
(WebCore::ComputedStyleExtractor::useFixedFontDefaultSize const): Deleted.
(WebCore::identifierForFamily): Deleted.
(WebCore::valueForFamily): Deleted.
(WebCore::touchActionFlagsToCSSValue): Deleted.
(WebCore::renderTextTransformFlagsToCSSValue): Deleted.
(WebCore::renderTextDecorationLineFlagsToCSSValue): Deleted.
(WebCore::renderTextDecorationStyleFlagsToCSSValue): Deleted.
(WebCore::renderTextDecorationSkipToCSSValue): Deleted.
(WebCore::textUnderlineOffsetToCSSValue): Deleted.
(WebCore::textDecorationThicknessToCSSValue): Deleted.
(WebCore::renderEmphasisPositionFlagsToCSSValue): Deleted.
(WebCore::valueForTextEmphasisStyle): Deleted.
(WebCore::textUnderlinePositionToCSSValue): Deleted.
(WebCore::speakAsToCSSValue): Deleted.
(WebCore::hangingPunctuationToCSSValue): Deleted.
(WebCore::fillRepeatToCSSValue): Deleted.
(WebCore::maskSourceTypeToCSSValue): Deleted.
(WebCore::maskModeToCSSValue): Deleted.
(WebCore::fillSizeToCSSValue): Deleted.
(WebCore::contentToCSSValue): Deleted.
(WebCore::counterToCSSValue): Deleted.
(WebCore::fontFamilyList): Deleted.
(WebCore::fontFamily): Deleted.
(WebCore::optionalLineHeight): Deleted.
(WebCore::lineHeight): Deleted.
(WebCore::fontSize): Deleted.
(WebCore::fontPalette): Deleted.
(WebCore::fontWeight): Deleted.
(WebCore::fontStretch): Deleted.
(WebCore::fontStyle): Deleted.
(WebCore::ComputedStyleExtractor::fontVariantShorthandValue const): Deleted.
(WebCore::fontSynthesis): Deleted.
(WebCore::fontSynthesisLonghandToCSSValue): Deleted.
(WebCore::fontSynthesisWeight): Deleted.
(WebCore::fontSynthesisStyle): Deleted.
(WebCore::fontSynthesisSmallCaps): Deleted.
(WebCore::zoomAdjustedPaddingOrMarginPixelValue): Deleted.
(WebCore::paddingOrMarginIsRendererDependent): Deleted.
(WebCore::positionOffsetValueIsRendererDependent): Deleted.
(WebCore::convertToPageBreak): Deleted.
(WebCore::convertToColumnBreak): Deleted.
(WebCore::isNonReplacedInline): Deleted.
(WebCore::rendererCanHaveTrimmedMargin): Deleted.
(WebCore::formattingContextRootStyle): Deleted.
(WebCore::physicalToFlowRelativeDirection): Deleted.
(WebCore::flowRelativeToPhysicalDirection): Deleted.
(WebCore::toMarginTrimType): Deleted.
(WebCore::toPaddingOrMarginPropertyID): Deleted.
(WebCore::isLayoutDependent): Deleted.
(WebCore::ComputedStyleExtractor::styledRenderer const): Deleted.
(WebCore::hasValidStyleForProperty): Deleted.
(WebCore::ComputedStyleExtractor::updateStyleIfNeededForProperty): Deleted.
(WebCore::computeRenderStyleForProperty): Deleted.
(WebCore::shapePropertyValue): Deleted.
(WebCore::valueForItemPositionWithOverflowAlignment): Deleted.
(WebCore::valueForContentPositionAndDistributionWithOverflowAlignment): Deleted.
(WebCore::valueForOffsetRotate): Deleted.
(WebCore::valueForOffsetShorthand): Deleted.
(WebCore::paintOrder): Deleted.
(WebCore::isFlexOrGridItem): Deleted.
(WebCore::valueForScrollTimelineAxis): Deleted.
(WebCore::valueForScrollTimelineName): Deleted.
(WebCore::valueForAnchorName): Deleted.
(WebCore::scrollTimelineShorthandValue): Deleted.
(WebCore::valueForSingleViewTimelineInset): Deleted.
(WebCore::valueForViewTimelineInset): Deleted.
(WebCore::viewTimelineShorthandValue): Deleted.
(WebCore::ComputedStyleExtractor::customPropertyValue const): Deleted.
(WebCore::ComputedStyleExtractor::customPropertyText const): Deleted.
(WebCore::fontShorthandValue): Deleted.
(WebCore::ComputedStyleExtractor::propertyValue const): Deleted.
(WebCore::ComputedStyleExtractor::hasProperty const): Deleted.
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const): Deleted.
(WebCore::ComputedStyleExtractor::propertyMatches const): Deleted.
(WebCore::ComputedStyleExtractor::getCSSPropertyValuesForShorthandProperties const): Deleted.
(WebCore::ComputedStyleExtractor::getCSSPropertyValuesFor2SidesShorthand const): Deleted.
(WebCore::ComputedStyleExtractor::getCSSPropertyValuesFor4SidesShorthand const): Deleted.
(WebCore::ComputedStyleExtractor::getCSSPropertyValuesForGridShorthand const): Deleted.
(WebCore::ComputedStyleExtractor::copyProperties const): Deleted.
(WebCore::ComputedStyleExtractor::getLayerCount const): Deleted.
(WebCore::ComputedStyleExtractor::getFillLayerPropertyShorthandValue const): Deleted.
(WebCore::ComputedStyleExtractor::getBackgroundShorthandValue const): Deleted.
(WebCore::ComputedStyleExtractor::getMaskShorthandValue const): Deleted.
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+TimingFunction.cpp: Added.
(WebCore::CSSPropertyParserHelpers::consumeSteps):
(WebCore::CSSPropertyParserHelpers::consumeLinearStopLength):
(WebCore::CSSPropertyParserHelpers::consumeLinearStop):
(WebCore::CSSPropertyParserHelpers::consumeLinear):
(WebCore::CSSPropertyParserHelpers::consumeCubicBezier):
(WebCore::CSSPropertyParserHelpers::consumeSpringFunction):
(WebCore::CSSPropertyParserHelpers::consumeTimingFunction):
(WebCore::CSSPropertyParserHelpers::parseTimingFunction):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+TimingFunction.h: Copied from Source/WebCore/animation/AnimationEffect.idl.
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeSteps): Deleted.
(WebCore::CSSPropertyParserHelpers::consumeLinear): Deleted.
(WebCore::CSSPropertyParserHelpers::consumeCubicBezier): Deleted.
(WebCore::CSSPropertyParserHelpers::consumeSpringFunction): Deleted.
(WebCore::CSSPropertyParserHelpers::consumeTimingFunction): Deleted.
* Source/WebCore/css/parser/CSSPropertyParserHelpers.h:
* Source/WebCore/platform/animation/TimingFunction.cpp:
(WebCore::TimingFunction::createFromCSSText): Deleted.
(WebCore::TimingFunction::createFromCSSValue): Deleted.
* Source/WebCore/platform/animation/TimingFunction.h:
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertTimingFunction):
* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::keyframeRulesForName const):
(WebCore::Style::Resolver::keyframeStylesForAnimation):